test/files/pos/t4744/Foo.java
public class Foo<T extends Comparable<? super T>> {}
