test/files/neg/t10260/B.java
public class B<T, R extends java.util.List<? super T>> {}

